--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.sqlbatch</groupId>
 	<artifactId>sqlbatch</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<name>executorsql</name>
 	<url>http://maven.apache.org</url>
 
@@ -13,7 +13,9 @@
 		<jodatime.version>2.5</jodatime.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sqljdbc4.version>3.0</sqljdbc4.version>
+		<db2jcc.version>3.8.47</db2jcc.version>
+		<ojdbc7.version>12.1.0.1</ojdbc7.version>
+		<jtds.version>1.3.1</jtds.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -29,10 +31,33 @@
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
+		
+		<!-- JDBC Drivers -->
+		
+		<!-- DB2 -->
 		<dependency>
-			<groupId>sqljdbc4</groupId>
-			<artifactId>sqljdbc4</artifactId>
-			<version>${sqljdbc4.version}</version>
+		    <groupId>db2jcc</groupId>
+		    <artifactId>db2jcc</artifactId>
+		    <version>${db2jcc.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.ibm.db2.jcc</groupId>
+			<artifactId>db2jcc_license_cu</artifactId>
+			<version>${db2jcc.version}</version>
+		</dependency>
+		
+		<!-- Oracle -->
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc7</artifactId>
+			<version>${ojdbc7.version}</version>
+		</dependency>
+		
+		<!-- SQL Server -->
+		<dependency>
+		    <groupId>net.sourceforge.jtds</groupId>
+		    <artifactId>jtds</artifactId>
+		    <version>${jtds.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -112,5 +137,4 @@
 
 		</plugins>
 	</build>
-
 </project>
