--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sqlbatch</groupId>
 	<artifactId>sqlbatch</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.1-SNAPSHOT</version>
+	<version>1.1.2-SNAPSHOT</version>
 	<name>sqlbatch</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<jdk.version>1.7</jdk.version>
-		<jodatime.version>2.5</jodatime.version>
-		<junit.version>4.11</junit.version>
-		<log4j.version>1.2.17</log4j.version>
+		<jdk.version>1.8</jdk.version>
+		<junit.version>4.12</junit.version>
+		<log4j-api.version>2.6.2</log4j-api.version>
 		<db2jcc.version>3.8.47</db2jcc.version>
 		<ojdbc7.version>12.1.0.1</ojdbc7.version>
 		<jtds.version>1.3.1</jtds.version>
@@ -27,9 +26,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>${log4j.version}</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j-api.version}</version>
 		</dependency>
 		
 		<!-- JDBC Drivers -->
