--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: java
-before_install:
-    - "sudo apt-get purge openjdk*"
-    - "sudo apt-get clean"
-    - "sudo apt-get autoremove"
-    - "sudo add-apt-repository -y ppa:webupd8team/java"
-    - "sudo apt-get update"
-install:
-    - "sudo apt-get install oracle-java8-installer"
-    - "sudo update-java-alternatives -s java-8-oracle"
-    - "export JAVA_HOME=/usr/lib/jvm/java-8-oracle"
+
+jdk:
+  - oraclejdk8
+
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
