--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sqlbatch</groupId>
-	<artifactId>sqlbatch</artifactId>
+	<artifactId>java-sqlbatch</artifactId>
 	<packaging>jar</packaging>
 	<version>1.1.2-SNAPSHOT</version>
-	<name>sqlbatch</name>
+	<name>java-sqlbatch</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
